# JuniorFSDev

./: .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  atlas.hcl  http-client.env.json  pyproject.toml  req.http
backend/app/: __init__.py  auth.py  config.py  db.py  load_models.py  main.py
backend/app/models/: __init__.py  agent.py  task.py  user.py
backend/app/routers/: agents.py  sockets.py  tasks.py  users.py
backend/app/schemas/: agents.py  tasks.py  users.py
backend/app/services/: agents.py
backend/migrations/: 20250920202735.sql  20250920202750.sql  20250920232341.sql  20250921124751.sql  atlas.sum
backend/requests/: agents.http  http-client.env.json  tasks.http  users.http
backend/tests/: test_auth.py  test_health.py
deployment/: minikube.sh  tunnel.service
deployment/manifests/: cluster-issuer.yml  ingress.yml  namespaces.yml
deployment/manifests/backend/: config.yml  deployment.yml  service.yml
deployment/manifests/frontend/: config.yml  deployment.yml  service.yml
frontend/: .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentPanel.tsx  AuthStatus.tsx  Navbar.tsx  TaskForm.tsx  TaskList.tsx  TaskMetaColumn.tsx  ToasterHost.tsx
frontend/hooks/: useAutosave.ts
frontend/lib/: api.ts  config.ts  store.ts  types.ts  useWebSocket.ts  utils.ts
(+11 files in other folders)
